# ece2400-sec10-sp26

./: .clang-format  .gitignore  CMakeLists.txt
eval/: CMakeLists.txt  slist-dpoly-reverse-v1-eval.cc  slist-dpoly-reverse-v2-eval.cc  slist-int-reverse-v1-eval.cc  slist-int-reverse-v2-eval.cc  slist-spoly-reverse-v1-eval.cc  slist-spoly-reverse-v2-eval.cc
include/: SList.h  SList.inl  SListIObj.h  SListInt.h  ece2400-stdlib.h  swap.h  swap.inl  types-dpoly.h
scripts/: build.sh  eval.sh  slist-dpoly-reverse-v1-eval.sh  slist-dpoly-reverse-v2-eval.sh  slist-int-reverse-v1-eval.sh  slist-int-reverse-v2-eval.sh  slist-plot-all.py  slist-plot.py  slist-spoly-reverse-v1-eval.sh  slist-spoly-reverse-v2-eval.sh  test.sh
src/: CMakeLists.txt  SListIObj.cc  SListInt.cc  ece2400-stdlib.cc  slist-dpoly-adhoc.cc  slist-int-adhoc.cc  slist-spoly-adhoc.cc  types-dpoly.cc
test/: CMakeLists.txt  slist-dpoly-directed-test.cc  slist-int-directed-test.cc  slist-spoly-directed-test.cc  swap-directed-test.cc  types-dpoly-directed-test.cc
